@@ -44,13 +44,11 @@ import org.apache.cayenne.query.QueryChain;
 import org.apache.cayenne.tx.BaseTransaction;
 import org.apache.cayenne.tx.Transaction;
 import org.apache.cayenne.tx.TransactionManager;
-import org.apache.cayenne.tx.TransactionalOperation;
 import org.apache.cayenne.util.ToStringBuilder;
 
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
@@ -731,7 +729,10 @@ public class DataDomain implements QueryEngine, DataChannel {
 	 * @since 4.1
 	 */
 	public void addQueryFilter(DataChannelQueryFilter filter) {
-		addListener(filter);
+		// skip double listener registration, if filter already in sync filters list
+		if(!syncFilters.contains(filter)) {
+			addListener(filter);
+		}
 		queryFilters.add(filter);
 	}
 
@@ -742,7 +743,10 @@ public class DataDomain implements QueryEngine, DataChannel {
 	 * @since 4.1
 	 */
 	public void addSyncFilter(DataChannelSyncFilter filter) {
-		addListener(filter);
+		// skip double listener registration, if filter already in query filters list
+		if(!queryFilters.contains(filter)) {
+			addListener(filter);
+		}
 		syncFilters.add(filter);
 	}
 
